@startuml Class_Diagram
!theme plain
title Django Models Class Diagram

class "django.contrib.auth.models.User" as User {
  + id : AutoField
  + username : CharField
  + email : EmailField
  + password : CharField
  + is_staff : BooleanField
  + is_superuser : BooleanField
}

class Service {
  + id : AutoField
  + name : CharField(100)
  + description : TextField
  + price : DecimalField(8, 2)
  + duration_minutes : IntegerField
  + is_active : BooleanField
  --
  + __str__() : String
}

class Appointment {
  + id : AutoField
  + date : DateField
  + start_time : TimeField
  + end_time : TimeField
  + phone_number : CharField(10)
  + email : EmailField
  + special_requests : TextField
  + status : CharField(20)
  + created_at : DateTimeField
  --
  + save(*args, **kwargs) : void
  + __str__() : String
}

class StaffDaySchedule {
  + id : AutoField
  + weekday : PositiveSmallIntegerField
  + is_working : BooleanField
  + opens_at : TimeField
  + closes_at : TimeField
  --
  + __str__() : String
}

' Relationships (Foreign Keys)
User "1" *-- "0..*" Appointment : user
Service "1" *-- "0..*" Appointment : service
User "1" *-- "0..*" StaffDaySchedule : user (related_name='staff_day_schedules')

@enduml
